feat: added cost model
